# trackr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/trackr/: __main__.py  cli.py  config.py  dashboard.py  healthcheck.py  http.py  pending.py  qbittorrent.py  session.py  ui.py  updater.py  upload_queue.py
src/trackr/flows/: configure.py  delete.py  drafts.py  game.py  inspect.py  movie.py  rejection.py  retry.py  series.py
src/trackr/media/: imagehost.py  lookup.py  mediainfo.py  torrent.py
src/trackr/nfo/: builder.py
src/trackr/trackers/: base.py  c411.py  c411_cats.py  torr9.py  torr9_cats.py
