[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackr"
version = "0.1.30"
description = "CLI guidé pour publier des torrents sur plusieurs trackers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "platformdirs>=4.2",
    "httpx[socks]>=0.27",
    "tomli-w>=1.0",
    "torf>=4.2",
]

[project.scripts]
trackr = "trackr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trackr"]
